# mlops

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.dvc/: config
.github/workflows/: pre-commit.yaml
configs/: config_cpu_1.yaml  config_gpu_1.yaml  config_gpu_2.yaml
mlops/: .gitignore  config.py  infer.py  model.py  prepare_dataset.py  trainer.py
src/: .gitignore  config.py  infer.py  model.py  prepare_data.py  trainer.py
