[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["ovctech"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lightning = "^2.1.2"
seaborn = "^0.13.0"
pandas = "^2.1.3"
torch = "^2.1.1"
torchvision = "^0.16.1"
ipython = "^8.18.1"
pytorch-lightning = "^2.1.2"
pytorch-light = "^0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
